[package]
name = "mlua-bridge"
version = "0.4.2"
edition = "2021"
description = "Generate UserData implementations for mlua"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.86", features = ["full"] }
darling = "0.20"
ident_case = "1"

[dev-dependencies]
mlua = { version = "0.10", features = ["lua53", "vendored"] }

[features]
default = []
luals-gen = []
